# fastapi-usuarios

./: .coverage  .gitignore  README.md  pyproject.toml
src/: main.py
src/controllers/: user_controller.py
src/models/: user.py
src/repositories/: user_repository.py
src/services/: user_service.py
tests/: conftest.py  test_app.py  test_main_users.py
