[project]
name = "leitura-usuario"
version = "0.1.0"
description = "Desafio de backend junior VULCANN!"
authors = [
    {name = "angels1233",email = "mateusmoura1233@gmail.com"}
]
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "fastapi[standard] (>=0.116.1,<0.117.0)",
    "fastapi-middleware (>=0.2.1,<0.3.0)"
]

[tool.poetry]
packages = [{include = "leitura_usuario", from = "src"}]


[tool.poetry.group.dev.dependencies]
ruff = "^0.12.12"
pytest = "^8.4.2"
pytest-cov = "^6.3.0"
taskipy = "^1.14.1"

[tool.taskipy.tasks]
run = 'fastapi dev src/main.py'
pre_test = 'task lint'
test = 'pytest -s -x --cov=src -vv'
post_test = 'coverage html'
lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format .'

[tool.pytest.ini_options]
pythonpath = "."
addopts = "-p no:warnings"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I','F','E','W','PL','PT']

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
